# SDLBug1

./: README.md  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts
app/jni/src/: main.c
app/src/androidTest/java/me/elinge/sdlbug1/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/me/elinge/sdlbug1/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/me/elinge/sdlbug1/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
